Fix tree problems when deleting elements
Visual changes

--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "**/.*",
     "node_modules",
     "bower_components"
-  ]
+  ],
+  "dependencies": {
+    "polymer-color-picker": "^1.0.1"
+  }
 }
